Gujarati Support Added!
Gujarati is a language of India. Spoken In Gujarat.

--- a/LANGUAGES/languages.json
+++ b/LANGUAGES/languages.json
@@ -3314,5 +3314,70 @@
         "STR_4KN_UNSUPPORTED":"Зараз Ventoy не падтрымлівае ўласныя прылады 4K.",
         
         "STRXXX":""
+    },
+    {
+        "name":"Gujarati (ગુજરાતી)",
+        "FontFamily":"Anek Gujarati",
+        "FontSize":16,
+        "Author":"rjdj0261",
+
+        "STR_ERROR":"ભૂલ",
+        "STR_WARNING":"ચેતવણી",
+        "STR_INFO":"માહિતી",
+        "STR_INCORRECT_DIR":"કૃપા કરીને યોગ્ય નિર્દેશિકા હેઠળ ચલાવો!",
+        "STR_INCORRECT_TREE_DIR":"મને અહીં ચલાવશો નહીં, કૃપા કરીને પ્રકાશિત થયેલ ઇન્સ્ટોલ પેકેજ ડાઉનલોડ કરો અને ત્યાં ચલાવો.",
+        "STR_DEVICE":"ઉપકરણ",
+        "STR_LOCAL_VER":"વેન્ટોય ઇન પેકેજ",
+        "STR_DISK_VER":"ઉપકરણમાં Ventoy",
+        "STR_STATUS":"સ્થિતિ - તૈયાર",
+        "STR_INSTALL":"ઇન્સ્ટોલ કરો",
+        "STR_UPDATE":"અપડેટ કરો",
+        "STR_UPDATE_TIP":"અપગ્રેડ ઓપરેશન સલામત છે, ISO ફાઇલો અપરિવર્તિત રહેશે. #@ચાલુ રાખીએ?",
+        "STR_INSTALL_TIP":"ઉપકરણ ફોર્મેટ થશે અને તમામ ડેટા ગુમ થઈ જશે.#@ચાલુ રાખીએ?",
+        "STR_INSTALL_TIP2":"ઉપકરણ ફોર્મેટ કરવામાં આવશે અને તમામ ડેટા ખોવાઈ જશે.#@ચાલુ રાખીએ? (ડબલ ચેક)",
+        "STR_INSTALL_SUCCESS":"અભિનંદન!#@વેન્ટોયને ઉપકરણ પર સફળતાપૂર્વક ઇન્સ્ટોલ કરવામાં આવ્યું છે.",
+        "STR_INSTALL_FAILED":"ઇન્સ્ટોલેશન દરમિયાન એક ભૂલ આવી. તમે USB ઉપકરણને ફરીથી દાખલ કરી શકો છો અને ફરીથી પ્રયાસ કરી શકો છો. વિગતો માટે log.txt તપાસો. જો તે હંમેશા નિષ્ફળ જાય, તો કૃપા કરીને સત્તાવાર વેબસાઇટ પર FAQ નો સંદર્ભ લો.",
+        "STR_UPDATE_SUCCESS":"અભિનંદન!#@વેન્ટોયને ઉપકરણ પર સફળતાપૂર્વક અપડેટ કરવામાં આવ્યું છે.",
+        "STR_UPDATE_FAILED":"અપડેટ દરમિયાન એક ભૂલ આવી. તમે USB ઉપકરણને ફરીથી દાખલ કરી શકો છો અને ફરીથી પ્રયાસ કરી શકો છો. વિગતો માટે log.txt તપાસો. જો તે હંમેશા નિષ્ફળ જાય, તો કૃપા કરીને સત્તાવાર વેબસાઇટ પર FAQ નો સંદર્ભ લો.",
+        "STR_WAIT_PROCESS":"એક થ્રેડ ચાલી રહ્યો છે, કૃપા કરીને રાહ જુઓ...",
+        "STR_MENU_OPTION":"વિકલ્પ",
+        "STR_MENU_SECURE_BOOT":"સુરક્ષિત બુટ આધાર",
+        "STR_MENU_PART_CFG":"પાર્ટીશન રૂપરેખાંકન",
+        "STR_BTN_OK":"બરાબર",
+        "STR_BTN_CANCEL":"રદ કરો",
+        "STR_PRESERVE_SPACE":"ડિસ્કના અંતે થોડી જગ્યા સાચવો",
+        "STR_SPACE_VAL_INVALID":"આરક્ષિત જગ્યા માટે અમાન્ય મૂલ્ય",
+        "STR_MENU_CLEAR":"વેન્ટોય સાફ કરો",
+        "STR_CLEAR_SUCCESS":"વેન્ટોયને ઉપકરણમાંથી સફળતાપૂર્વક દૂર કરવામાં આવ્યું છે.",
+        "STR_CLEAR_FAILED":"વેન્ટોયને ડિસ્કમાંથી દૂર કરતી વખતે ભૂલ આવી. તમે USB ઉપકરણને ફરીથી દાખલ કરી શકો છો અને ફરીથી પ્રયાસ કરી શકો છો. વિગતો માટે log.txt તપાસો.",
+        "STR_MENU_PART_STYLE":"પાર્ટીશન શૈલી",
+        "STR_DISK_2TB_MBR_ERROR":"કૃપા કરીને 2TB થી વધુ ઉપકરણો માટે GPT પસંદ કરો",
+        "STR_SHOW_ALL_DEV":"બધા ઉપકરણો બતાવો",
+        "STR_PART_ALIGN_4KB":"4KB સાથે પાર્ટીશનો સંરેખિત કરો",
+        "STR_WEB_COMMUNICATION_ERR":"વાર્તાલાપ ભૂલ:",
+        "STR_WEB_REMOTE_ABNORMAL":"સંચાર ભૂલ: દૂરસ્થ અસાધારણ",
+        "STR_WEB_REQUEST_TIMEOUT":"સંચાર ભૂલ: વિનંતીનો સમય સમાપ્ત થયો",
+        "STR_WEB_SERVICE_UNAVAILABLE":"સંચાર ભૂલ: સેવા અનુપલબ્ધ",
+        "STR_WEB_TOKEN_MISMATCH":"ડિમન સ્થિતિ અપડેટ કરી, કૃપા કરીને પછીથી ફરી પ્રયાસ કરો.",
+        "STR_WEB_SERVICE_BUSY":"સેવા વ્યસ્ત છે, કૃપા કરીને પછીથી ફરી પ્રયાસ કરો.",
+        "STR_MENU_VTSI_CREATE":"VTSI ફાઇલ જનરેટ કરો",
+        "STR_VTSI_CREATE_TIP":"આ સમય ઉપકરણ પર લખશે નહીં, પરંતુ માત્ર VTSI ફાઇલ જનરેટ કરશે#@ ચાલુ રાખો?",
+        "STR_VTSI_CREATE_SUCCESS":"VTSI ફાઇલ સફળતાપૂર્વક બનાવવામાં આવી છે!#@તમે તેને ઉપકરણ પર લખવા માટે Rufus(3.15+) નો ઉપયોગ કરી શકો છો જેથી વેન્ટોયનું ઇન્સ્ટોલેશન પૂર્ણ કરી શકાય.",
+        "STR_VTSI_CREATE_FAILED":"VTSI ફાઇલ બનાવવામાં નિષ્ફળ.",
+        "STR_MENU_PART_RESIZE":"બિન-વિનાશક ઇન્સ્ટોલ કરો",
+        "STR_PART_RESIZE_TIP":"વેન્ટોય જો શક્ય હોય તો બિન-વિનાશક ઇન્સ્ટોલેશનનો પ્રયાસ કરશે. #@ચાલુ રાખીએ?",
+        "STR_PART_RESIZE_SUCCESS":"અભિનંદન!#@Ventoy બિન-વિનાશક ઇન્સ્ટોલેશન સફળતાપૂર્વક સમાપ્ત થયું.",
+        "STR_PART_RESIZE_FAILED":"બિન-વિનાશક ઇન્સ્ટોલેશન નિષ્ફળ થયું, વિગતો માટે log.txt તપાસો.",
+        "STR_PART_RESIZE_UNSUPPORTED":"વેન્ટોય બિન-વિનાશક ઇન્સ્ટોલેશન બંધ થયું કારણ કે કેટલીક શરતો પૂરી કરી શકાતી નથી. વિગતો માટે log.txt તપાસો.",
+        "STR_INSTALL_YES_TIP1":"ચેતવણી: ડેટા ખોવાઈ જશે!",
+        "STR_INSTALL_YES_TIP2":"કૃપા કરીને નીચેના ટેક્સ્ટ બૉક્સમાં હા દાખલ કરો અને ખાતરી કરો કે તમે અપગ્રેડ કરવાને બદલે ખરેખર નવું ઇન્સ્ટોલ કરવા માંગો છો.",
+        "STR_PART_VENTOY_FS":"વેન્ટોય પાર્ટીશન માટે ફાઇલ સિસ્ટમ",
+        "STR_PART_FS":"ફાઇલ સિસ્ટમ",
+        "STR_PART_CLUSTER":"ક્લસ્ટર કદ",
+        "STR_PART_CLUSTER_DEFAULT":"સિસ્ટમ ડિફૉલ્ટ મૂલ્ય",
+        "STR_DONATE":"દાન કરો",
+        "STR_4KN_UNSUPPORTED":"હાલમાં વેન્ટોય 4K નેટીવ ઉપકરણોને સપોર્ટ કરતું નથી.",
+
+        "STRXXX":""
     }
 ]
